fix(fonts): Fixes font flicker on conditional rendering.

--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -1,12 +1,8 @@
-import { createGlobalStyle } from 'styled-components';
-
-export const Fonts = createGlobalStyle`
     @font-face {
         font-family: 'Poppins';
         src: url('/fonts/Poppins-Regular.woff2') format('woff2'),
             url('/fonts/Poppins-Regular.woff') format('woff'),
-            url('/fonts/Poppins-Regular.ttf') format('truetype'),
-            local("Poppins");
+            url('/fonts/Poppins-Regular.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -16,8 +12,7 @@ export const Fonts = createGlobalStyle`
         font-family: 'Poppins-SemiBold';
         src: url('/fonts/Poppins-SemiBold.woff2') format('woff2'),
             url('/fonts/Poppins-SemiBold.woff') format('woff'),
-            url('/fonts/Poppins-SemiBold.ttf') format('truetype'),
-            local("Poppins-SemiBold");
+            url('/fonts/Poppins-SemiBold.ttf') format('truetype');
         font-weight: 600;
         font-style: normal;
         font-display: swap;
@@ -27,10 +22,8 @@ export const Fonts = createGlobalStyle`
         font-family: 'Montserrat';
         src: url('/fonts/Montserrat-Black.woff2') format('woff2'),
             url('/fonts/Montserrat-Black.woff') format('woff'),
-            url('/fonts/Montserrat-Black.ttf') format('truetype'),
-            local('Montserrat');
+            url('/fonts/Montserrat-Black.ttf') format('truetype');
         font-weight: 900;
         font-style: normal;
         font-display: swap;
     }
-`;
